==> Rhk666/RenHongKe_BiShe/2.4G遥控器程序/遥控器_毕设/Hardware/NRF24L01.c <==
#include "stm32f10x.h"                  // Device header
#include "Delay.h"
#include "NRF24L01_Define.h"

void NRF24L01_W_CE(uint8_t BitValue)
{
	/*根据BitValue的值，将CE置高电平或者低电平*/
	GPIO_WriteBit(GPIOB, GPIO_Pin_0, (BitAction)BitValue);
}

void NRF24L01_W_CSN(uint8_t BitValue)
{
	/*根据BitValue的值，将CSN置高电平或者低电平*/
	GPIO_WriteBit(GPIOA, GPIO_Pin_4, (BitAction)BitValue);
}

uint8_t NRF24L01_SPI_SwapByte(uint8_t Byte)
{
	uint8_t i;
	
	/*此处使用SPI模式0进行通信*/
	/*循环8次，主机依次移出和移入数据的每一位*/
	for (i = 0; i < 8; i ++)
	{
		/*SPI为高位先行，因此移出高位至MOSI引脚*/
		if (Byte & 0x80)			//判断Byte的最高位
		{
			NRF24L01_W_MOSI(1);		//如果为1，则给MOSI输出1
		}
		else
		{
			NRF24L01_W_MOSI(0);		//如果为0，则给MOSI输出0
		}
		Byte <<= 1;					//Byte左移一位，最低位空出来用于接收数据位
		
		/*产生SCK上升沿*/
		NRF24L01_W_SCK(1);
		
		/*从MISO引脚移入数据，存入Byte的最低位*/
		if (NRF24L01_R_MISO())		//读取MISO引脚
		{
			Byte |= 0x01;			//如果为1，则给Byte最低位置1
		}							//如果为0，则不做任何操作，因为左移后低位默认补0
		
		/*产生SCK下降沿*/
		NRF24L01_W_SCK(0);
	}
	
	/*返回Byte数据，此时的Byte为SPI交换接收得到的一个字节数据*/
	return Byte;
}
